@@ -1,3 +1,10 @@
+1992-10-08  dickey@software.org
+
+	* src/dedtype.c:
+	make search/scrolling interruptable (did not reset a flag
+	correctly before), and make the skipping-message show during
+	searches.
+
 1992-09-23  dickey@software.org
 
 	* src/ded.c: moved 'dedwait()' call for PAGER inside 'forkfile()'
